'Standard' mit d anstatt t

--- a/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
+++ b/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
@@ -437,7 +437,7 @@
                             </select>
                             <small id="page-questionsOrderHelp-{{ i }}"
                                    class="form-text text-muted"
-                                   i18n>Diese Option überschreibt den Standartwert aus dem Reiter Allgemein.</small>
+                                   i18n>Diese Option überschreibt den Standardwert aus dem Reiter Allgemein.</small>
                         </div>
 
                         <!-- page-visible -->
@@ -453,7 +453,7 @@
                                    i18n>Sichtbar</label>
                             <small id="page-visibleHelp-{{ i }}"
                                    class="form-text text-muted"
-                                   i18n>Diese Option stellt ein, ob die Seite standartmäßig sichtbar ist.</small>
+                                   i18n>Diese Option stellt ein, ob die Seite standardmäßig sichtbar ist.</small>
                         </div>
 
                         <!-- page-readOnly -->
@@ -469,7 +469,7 @@
                                    i18n>Deaktiviert</label>
                             <small id="page-readOnlyHelp-{{ i }}"
                                    class="form-text text-muted"
-                                   i18n>Diese Option stellt ein, ob die Seite standartmäßig ausfüllbar ist.</small>
+                                   i18n>Diese Option stellt ein, ob die Seite standardmäßig ausfüllbar ist.</small>
                         </div>
 
                         <!-- page-maxTimeToFinish -->
@@ -485,7 +485,7 @@
                                    attr.aria-describedby="page-maxTimeToFinishHelp-{{ i }}">
                             <small id="page-maxTimeToFinishHelp-{{ i }}"
                                    class="form-text text-muted"
-                                   i18n>Diese Option überschreibt den Standartwert pro Seite aus dem Reiter
+                                   i18n>Diese Option überschreibt den Standardwert pro Seite aus dem Reiter
                                 Timer/Quiz.</small>
                         </div>
 
