--- a/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
+++ b/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
@@ -146,7 +146,7 @@
                            i18n>Deaktiviert</label>
                     <small id="question-readOnlyHelp"
                            class="form-text text-muted"
-                           i18n>Diese Option stellt ein, ob das Feld standartmäßig ausfüllbar ist.</small>
+                           i18n>Diese Option stellt ein, ob das Feld standardmäßig ausfüllbar ist.</small>
                 </div>
 
                 <!-- question-hideNumber -->
