--- a/power/src/app/fragebogen/editor/editor.component.css
+++ b/power/src/app/fragebogen/editor/editor.component.css
@@ -12,7 +12,8 @@
         border-width: 0 !important;
     }
 
-    #toolbox {
+    #toolbox,
+    #favorites {
         overflow-y: hidden !important;
     }
 
@@ -21,7 +22,8 @@
     }
 }
 
-#toolbox {
+#toolbox,
+#favorites {
     border-width: 0 !important;
     max-height: 327px;
     overflow-x: hidden;
@@ -29,17 +31,20 @@
     scroll-snap-type: y mandatory;
 }
 
-#toolbox li {
+#toolbox li,
+#favorites li {
     border-left-width: 0 !important;
     border-right-width: 0 !important;
     scroll-snap-align: start;
 }
 
-#toolbox li:last-child {
+#toolbox li:last-child,
+#favorites li:last-child {
     border-bottom-width: 0 !important;
 }
 
-#toolbox li:first-child {
+#toolbox li:first-child,
+#favorites li:first-child {
     border-top-width: 0 !important;
 }
 
