--- a/power/src/app/fragebogen/editor/editor.component.html
+++ b/power/src/app/fragebogen/editor/editor.component.html
@@ -102,12 +102,29 @@
                 <span class="ml-2"
                       i18n>Favoriten</span>
             </div>
-            <div id="favorites"
-                 class="card-body"
-                 [collapse]="!isCollapsedToolBox"
-                 [isAnimated]="true">
-                Coming Soon&trade;
-            </div>
+
+            <ul id="favorites"
+                class="list-group list-group-flush"
+                [collapse]="!isCollapsedToolBox"
+                [isAnimated]="true">
+                <smooth-dnd-container groupName="favorites"
+                                      [getChildPayload]="getPayloadFavorites"
+                                      behaviour="copy">
+                    <li id="{{ item.content.type }}"
+                        *ngFor="let item of favorites; index as i"
+                        role="button"
+                        tabindex="0"
+                        class="list-group-item clickable smooth-dnd-draggable-wrapper bg-light py-2"
+                        title="{{ item.content.title.default }}"
+                        (click)="insertFavorite(i)"
+                        (keyup.enter)="insertFavorite(i)">
+                        <span>{{ item.content.title.default }}</span>
+                    </li>
+                </smooth-dnd-container>
+                <li class="p-2"
+                    *ngIf="favorites.length === 0"
+                    i18n>Sie haben keine Favoriten</li>
+            </ul>
         </div>
     </div>
 
@@ -441,7 +458,9 @@
                                     class="btn btn-light btn-sm mr-2"
                                     i18n-title
                                     title="Als Favoriten speichern"
-                                    disabled>
+                                    (click)="addFavorite(i)"
+                                    *ngIf="!isFavorite(container)"
+                                    [disabled]="!container.title.default">
                                 <svg width="1em"
                                      height="1em"
                                      viewBox="0 0 16 16"
@@ -454,6 +473,26 @@
                                 </svg>
                                 <span class="sr-only"
                                       i18n>Als Favoriten speichern</span>
+                            </button>
+
+                            <button type="button"
+                                    class="btn btn-light btn-sm mr-2"
+                                    i18n-title
+                                    title="Favoriten löschen"
+                                    (click)="delFavorite(i)"
+                                    *ngIf="isFavorite(container)">
+                                <svg width="1em"
+                                     height="1em"
+                                     viewBox="0 0 16 16"
+                                     class="bi bi-star-fill align-baseline"
+                                     fill="currentColor"
+                                     xmlns="http://www.w3.org/2000/svg"
+                                     aria-hidden="true">
+                                    <path
+                                          d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.283.95l-3.523 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                                </svg>
+                                <span class="sr-only"
+                                      i18n>Favoriten löschen</span>
                             </button>
 
                             <button type="button"
