--- a/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
+++ b/power/src/app/fragebogen/editor/formular-settings/formular-settings.component.html
@@ -11,7 +11,9 @@
                 <!-- form-title -->
                 <div class="form-group">
                     <label for="form-title"
-                           i18n>Formular Titel*</label>
+                           i18n>Formular Titel
+                           <span (click)="formsettingsmodal.scrollToFooter()" role="button">*</span>
+                     </label>
                     <input type="text"
                            class="form-control"
                            [(ngModel)]="model.title.default"
@@ -108,7 +110,9 @@
                 <!-- form-completedHtml -->
                 <div class="form-group">
                     <label for="form-completedHtml"
-                           i18n>Abschlusstext*</label>
+                           i18n>Abschlusstext
+                           <span (click)="formsettingsmodal.scrollToFooter()" role="button">*</span>
+                     </label>
                     <textarea class="form-control"
                               [(ngModel)]="model.completedHtml.default"
                               id="form-completedHtml"
