--- a/power/src/app/shared/modal/modal.component.html
+++ b/power/src/app/shared/modal/modal.component.html
@@ -25,8 +25,7 @@
 
         <!-- modal body -->
         <ng-content></ng-content>
-
-        <div class="container-fluid position-relative">
+        <div id="footer-{{ uniqId }}" class="container-fluid position-relative">
             <footer class="pt-4 my-md-5 pt-md-5 border-top w-100 m-0 overflow-hidden">
                 <div class="row justify-content-end">
                     <div class="col-md-4 text-right">
