Refactoring: Storage Service

--- a/power/src/app/fragebogen/dashboard/dashboard.component.html
+++ b/power/src/app/fragebogen/dashboard/dashboard.component.html
@@ -486,4 +486,5 @@
     </div>
 </main>
 
-<power-forms-dashboard-newform #newform></power-forms-dashboard-newform>
+<power-forms-dashboard-newform #newform 
+                                [(data)]="data"></power-forms-dashboard-newform>
