--- a/power/src/app/immobilien/immobilien/immobilien.component.html
+++ b/power/src/app/immobilien/immobilien/immobilien.component.html
@@ -66,6 +66,10 @@
                         </div>
                     </div>
 
+                    <div *ngIf="select['type'] == 'multiSelect'" style="padding-left: 40px; margin-bottom: 1rem;">
+                        HINWEIS: Eine Auswahl über die Karte ist für die Vergleiche leider nicht möglich.
+                    </div>
+
                     <!-- Select DrawValues-->
                     <ul *ngIf="select['type'] == 'single' || select['type'] == 'multiSelect'">
 
