Added info message when adding favorite

--- a/power/src/app/fragebogen/editor/editor.component.html
+++ b/power/src/app/fragebogen/editor/editor.component.html
@@ -459,8 +459,7 @@
                                     i18n-title
                                     title="Als Favoriten speichern"
                                     (click)="addFavorite(i)"
-                                    *ngIf="!isFavorite(container)"
-                                    [disabled]="!container.title.default">
+                                    *ngIf="!isFavorite(container)">
                                 <svg width="1em"
                                      height="1em"
                                      viewBox="0 0 16 16"
