--- a/power/src/app/fragebogen/fragebogen.scss
+++ b/power/src/app/fragebogen/fragebogen.scss
@@ -57,12 +57,21 @@ td {
     background-color: #ccc !important;
 }
 
-.sv_q_imgsel {
-    width: 210px;
-}
-
 .sv_q_imagepicker_inline {
     line-height: normal !important;
+}
+
+.sv_q_imgsel_text, .sv_q_imgsel_text span {
+    display: block;
+    width: 200px;
+    overflow: hidden;
+    overflow-wrap: break-word;
+    word-wrap: break-word !important;
+    white-space: normal !important;
+}
+
+.custom-control-label::before {
+    top: 0.1rem !important;
 }
 
 @media (max-width: 576px) {
