Fixed HTML and style linter warnings

--- a/power/src/app/fragebogen/fragebogen.scss
+++ b/power/src/app/fragebogen/fragebogen.scss
@@ -61,7 +61,8 @@ td {
     line-height: normal !important;
 }
 
-.sv_q_imgsel_text, .sv_q_imgsel_text span {
+.sv_q_imgsel_text,
+.sv_q_imgsel_text span {
     display: block;
     width: 200px;
     overflow: hidden;
