--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -1,4 +1,4 @@
-<div class="position-relative overflow-hidden p-3 p-md-5 h-50 text-center">
+<!-- <div class="position-relative overflow-hidden p-3 p-md-5 h-50 text-center">
     <div class="col-lg-5 p-lg-5 mx-auto my-5 headline">
         <h2 i18n>Bodenrichtwerte</h2>
         <p class="lead"
@@ -33,9 +33,34 @@
             <a class="btn btn-danger"
                [routerLink]="['/forms']"
                i18n>Zur Anwendung</a>
-        </div>
-        <!-- <div class="bg-dark shadow-sm"
+        </div> -->
+<!-- <div class="bg-dark shadow-sm"
              style="width: 80%; height: 300px; border-radius: 21px 21px 0 0;"></div> -->
-        <div class="product-device-4 shadow-sm mx-auto d-none d-lg-block"></div>
+<!-- <div class="product-device-4 shadow-sm mx-auto d-none d-lg-block"></div>
+    </div>
+</div> -->
+<div class="container-fluid border">
+    <div class="row border p-5">
+        <div class="col-3 border bodenrichtwerte" style="width: 300px; height: 300px;"></div>
+        <div class="col-9 border" style="">
+            <p class="lead"
+               i18n>Für Bauland und landwirtschaftliche Nutzflächen für das gesamte Land Niedersachsen</p>
+            <input placeholder="Geben Sie einen Ort ein" style="margin-top: 200px;">   
+        </div>
+    </div>
+    <div class="row border p-5">
+        <div class="col-9 border" style="">
+            <p class="lead"
+               i18n>Für Bauland und landwirtschaftliche Nutzflächen für das gesamte Land Niedersachsen</p>
+               <input placeholder="Geben sie eine Formular-PIN ein" style="margin-top: 200px;">
+        </div>
+        <div class="col-3 border bodenrichtwerte" style="width: 300px; height: 300px;"></div>
+    </div>
+    <div class="row border p-5">
+        <div class="col-3 border bodenrichtwerte" style="width: 300px; height: 300px;"></div>
+        <div class="col-9 border" style="">
+            <p class="lead"
+               i18n>Für Bauland und landwirtschaftliche Nutzflächen für das gesamte Land Niedersachsen</p>
+        </div>
     </div>
 </div>
