--- a/power/src/app/static/feedback/feedback.component.scss
+++ b/power/src/app/static/feedback/feedback.component.scss
@@ -1,9 +1,4 @@
 ul {
-    list-style: none;
-    padding: 0;
-}
-
-ul li::before {
-    content: url('~assets/icons/arrow-right.svg');
-    padding-right: 8px;
+    list-style: url('~assets/icons/arrow-right.svg');
+    list-style-position: outside;
 }
