--- a/power/src/app/static/feedback/feedback.component.html
+++ b/power/src/app/static/feedback/feedback.component.html
@@ -1,22 +1,34 @@
-<div class="p-4 text-center">
-    <h2>Feedback geben</h2>
-    <p class="lead">Sie haben ein Problem? Oder wollen einen Vorschlag machen?</p>
-    <p class="lead">Bitte formulieren Sie ihr Anliegen so exakt wie möglich:</p>
-    <ul>
-        <li>Genaue Beschreibung des Fehlers bzw. Vorschlags</li>
-        <li>Welche Schritte haben den Fehler ausgelöst?</li>
-        <li>Unter welcher URL (Adresszeile im Browser) ist das Problem aufgetreten?</li>
-        <li>Wenn möglich Bildschirmfotos anhängen</li>
-        <li>Angabe der Versionsnummer (siehe Fußzeile)</li>
-    </ul>
-    <p class="lead">Dieser Button öffnet Ihr E-Mail-Programm:</p>
-    <p>Der Empfänger, Betreff und ein Basistext sind bereits ausgefüllt.</p>
-    <a type="button"
-       class="btn btn-primary"
-       href="mailto:{{ mail }}?subject={{ subject }}&body={{ body }}">
-        Feedback geben
-    </a>
-    <br><br>
-    <p>Falls sich Ihr E-Mail-Programm nicht öffnet, senden Sie die E-Mail bitte an:</p>
-    <code>incoming+lgln-power-ni-power-frontend-17688796-issue-@incoming.gitlab.com</code>
+<div class="container">
+    <div class="row">
+        <div class="col-sm text-center">
+            <h2>Feedback geben</h2>
+            <p class="lead">Sie haben ein Problem? Oder wollen einen Vorschlag machen?</p>
+            <p class="lead">Bitte formulieren Sie ihr Anliegen so exakt wie möglich:</p>
+        </div>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-12 col-sm-12 col-md-8 col-xl-5">
+            <ul>
+                <li>Genaue Beschreibung des Fehlers bzw. Vorschlags</li>
+                <li>Welche Schritte haben den Fehler ausgelöst?</li>
+                <li>Unter welcher URL (Adresszeile im Browser) ist das Problem aufgetreten?</li>
+                <li>Wenn möglich Bildschirmfotos anhängen</li>
+                <li>Angabe der Versionsnummer (siehe Fußzeile)</li>
+            </ul>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm text-center">
+            <p class="lead">Dieser Button öffnet Ihr E-Mail-Programm:</p>
+            <p>Der Empfänger, Betreff und ein Basistext sind bereits ausgefüllt.</p>
+            <a type="button"
+            class="btn btn-primary"
+            href="mailto:{{ mail }}?subject={{ subject }}&body={{ body }}">
+                Feedback geben
+            </a>
+            <br><br>
+            <p>Falls sich Ihr E-Mail-Programm nicht öffnet, senden Sie die E-Mail bitte an:</p>
+            <code>incoming+lgln-power-ni-power-frontend-17688796-issue-@incoming.gitlab.com</code>
+        </div>
+    </div>
 </div>
