--- a/power/src/app/static/feedback/feedback.component.html
+++ b/power/src/app/static/feedback/feedback.component.html
@@ -1,15 +1,16 @@
 <div class="container">
     <div class="row">
-        <div class="col-sm text-center">
+        <div class="col-sm text-center pt-3">
             <h2>Feedback geben</h2>
-            <p class="lead">Sie haben ein Problem? Oder wollen einen Vorschlag machen?</p>
-            <p class="lead">Bitte formulieren Sie ihr Anliegen so exakt wie möglich:</p>
+            <p class="lead m-0">Sie haben ein Problem? Oder wollen einen Vorschlag machen?</p>
+            <p class="lead mb-3">Bitte formulieren Sie ihren Vorschlag so exakt wie möglich und <br>
+                bei Problemen orientieren Sie sich bitte an den folgenden Stichpunkten:</p>
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-12 col-sm-12 col-md-8 col-xl-5">
+        <div class="col-12 col-sm-12 col-md-8 col-xl-5 text-left">
             <ul>
-                <li>Genaue Beschreibung des Fehlers bzw. Vorschlags</li>
+                <li>Genaue Beschreibung des Fehlers</li>
                 <li>Welche Schritte haben den Fehler ausgelöst?</li>
                 <li>Unter welcher URL (Adresszeile im Browser) ist das Problem aufgetreten?</li>
                 <li>Wenn möglich Bildschirmfotos anhängen</li>
@@ -19,16 +20,33 @@
     </div>
     <div class="row">
         <div class="col-sm text-center">
-            <p class="lead">Dieser Button öffnet Ihr E-Mail-Programm:</p>
-            <p>Der Empfänger, Betreff und ein Basistext sind bereits ausgefüllt.</p>
+            <p class="lead mb-0">Dieser Button öffnet Ihr E-Mail-Programm:</p>
+            <p class="text-muted">Der Empfänger ist bereits ausgefüllt</p>
             <a type="button"
-            class="btn btn-primary"
-            href="mailto:{{ mail }}?subject={{ subject }}&body={{ body }}">
-                Feedback geben
-            </a>
-            <br><br>
-            <p>Falls sich Ihr E-Mail-Programm nicht öffnet, senden Sie die E-Mail bitte an:</p>
-            <code>incoming+lgln-power-ni-power-frontend-17688796-issue-@incoming.gitlab.com</code>
+               class="btn btn-primary"
+               href="mailto:{{ mail }}">Feedback geben</a>
+            <p class="mt-3">Falls sich Ihr E-Mail-Programm nicht öffnet, senden Sie die E-Mail bitte an:</p>
+            <code class="mr-2">{{ mail }}</code>
+            <button type="button"
+                    class="btn btn-light btn-circle btn-sm mr-2"
+                    i18n-title
+                    title="Email-Adresse kopieren"
+                    (click)="copyEmailToClipboard()">
+                <svg width="1em"
+                     height="1em"
+                     viewBox="0 0 16 16"
+                     class="bi bi-clipboard align-baseline"
+                     fill="currentColor"
+                     xmlns="http://www.w3.org/2000/svg"
+                     aria-hidden="true">
+                    <path fill-rule="evenodd"
+                          d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z" />
+                    <path fill-rule="evenodd"
+                          d="M9.5 1h-3a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z" />
+                </svg>
+                <span class="sr-only"
+                      i18n>Email-Adresse kopieren</span>
+            </button>
         </div>
     </div>
 </div>
