refactored start page

--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -39,28 +39,54 @@
 <!-- <div class="product-device-4 shadow-sm mx-auto d-none d-lg-block"></div>
     </div>
 </div> -->
-<div class="container-fluid border">
-    <div class="row border p-5">
-        <div class="col-3 border bodenrichtwerte" style="width: 300px; height: 300px;"></div>
-        <div class="col-9 border" style="">
-            <p class="lead"
-               i18n>Für Bauland und landwirtschaftliche Nutzflächen für das gesamte Land Niedersachsen</p>
-            <input placeholder="Geben Sie einen Ort ein" style="margin-top: 200px;">   
+<div class="container-fluid">
+    <div class="row pl-sm-5 py-sm-5">
+        <div class="col-sm-3 pr-sm-3 pr-0 pl-sm-0 pl-0">
+            <div class="image col-sm-12 p-0">
+                <img class="img-fluid"
+                     src="../../../assets/logos/lgln_logo_wout_claim.png">
+            </div>
+        </div>
+        <div class="col-sm-9 pr-sm-0 pr-0 pl-sm-3 pl-0">
+            <div class="content col-sm-12 bg-dark text-white p-3">
+                <a class="h2 btn-link text-white font-weight-bold"
+                   [routerLink]="['/bodenrichtwerte']"
+                   i18n>BORIS.NI</a>
+                <p>Bodenrichtwertinformationssystem Niedersachsen</p>
+                <p class="lead pt-3"
+                   i18n>Für Bauland und landwirtschaftliche Nutzflächen für das gesamte Land Niedersachsen</p>
+                <!-- <input placeholder="Geben Sie einen Ort ein" style="margin-top: 200px;"> -->
+            </div>
         </div>
     </div>
-    <div class="row border p-5">
-        <div class="col-9 border" style="">
-            <p class="lead"
-               i18n>Für Bauland und landwirtschaftliche Nutzflächen für das gesamte Land Niedersachsen</p>
-               <input placeholder="Geben sie eine Formular-PIN ein" style="margin-top: 200px;">
+    <div class="row pl-sm-5 py-sm-5 bg-dark">
+        <div class="col-sm-9 pr-sm-3 pr-0 pl-sm-0 pl-0">
+            <div class="content col-sm-12 bg-white text-dark">
+                <p class="lead"
+                   i18n>BORIS.NIFür Bauland und landwirtschaftliche Nutzflächen für das gesamte Land Niedersachsen</p>
+                <!-- <input placeholder="Geben Sie einen Ort ein" style="margin-top: 200px;"> -->
+            </div>
         </div>
-        <div class="col-3 border bodenrichtwerte" style="width: 300px; height: 300px;"></div>
+        <div class="col-sm-3 pr-sm-0 pr-0 pl-sm-3 pl-0 order-sm-last order-first bg-white">
+            <div class="image col-sm-12 p-0">
+                <img class="img-fluid float-right"
+                     src="../../../assets/logos/lgln_logo_wout_claim.png">
+            </div>
+        </div>
     </div>
-    <div class="row border p-5">
-        <div class="col-3 border bodenrichtwerte" style="width: 300px; height: 300px;"></div>
-        <div class="col-9 border" style="">
-            <p class="lead"
-               i18n>Für Bauland und landwirtschaftliche Nutzflächen für das gesamte Land Niedersachsen</p>
+    <div class="row pl-sm-5 py-sm-5">
+        <div class="col-sm-3 pr-sm-3 pr-0 pl-sm-0 pl-0">
+            <div class="image col-sm-12 p-0">
+                <img class="img-fluid"
+                     src="../../../assets/IMG_Immobilienindex.webp">
+            </div>
+        </div>
+        <div class="col-sm-9 pr-sm-0 pr-0 pl-sm-3 pl-0">
+            <div class="content col-sm-12 bg-dark text-white">
+                <p class="lead"
+                   i18n>Für Bauland und landwirtschaftliche Nutzflächen für das gesamte Land Niedersachsen</p>
+                <!-- <input placeholder="Geben Sie einen Ort ein" style="margin-top: 200px;"> -->
+            </div>
         </div>
     </div>
 </div>
