refactored start page

--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -40,51 +40,69 @@
     </div>
 </div> -->
 <div class="container-fluid">
-    <div class="row pl-sm-5 py-sm-5">
-        <div class="col-sm-3 pr-sm-3 pr-0 pl-sm-0 pl-0">
+    <div class="row pl-sm-5 pt-sm-3">
+        <div class="col-sm-6 p-0">
             <div class="image col-sm-12 p-0">
-                <img class="img-fluid"
-                     src="../../../assets/logos/lgln_logo_wout_claim.png">
+                <img class="img-fluid rounded"
+                     src="../../../assets/IMG_8355.JPG">
             </div>
         </div>
-        <div class="col-sm-9 pr-sm-0 pr-0 pl-sm-3 pl-0">
-            <div class="content col-sm-12 bg-dark text-white p-3">
-                <a class="h2 btn-link text-white font-weight-bold"
+        <div class="col-sm-6 px-0 pl-sm-3">
+            <div class="content col-sm-12 text-dark p-5 rounded-left">
+                <a class="h2 btn-link text-dark font-weight-bold"
                    [routerLink]="['/bodenrichtwerte']"
                    i18n>BORIS.NI</a>
-                <p>Bodenrichtwertinformationssystem Niedersachsen</p>
-                <p class="lead pt-3"
-                   i18n>Für Bauland und landwirtschaftliche Nutzflächen für das gesamte Land Niedersachsen</p>
+                <p class="h6"
+                   i18n>Bodenrichtwertinformationssystem Niedersachsen</p>
+                <p class="lead text-justify"
+                   i18n>Die Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte
+                    in Niedersachsen stellen interessierten Nutzern unter BORIS.NI Bodenrichtwerte für Bauland und
+                    für Flächen der Land- und Forstwirtschaft zur Verfügung.</p>
                 <!-- <input placeholder="Geben Sie einen Ort ein" style="margin-top: 200px;"> -->
             </div>
         </div>
     </div>
-    <div class="row pl-sm-5 py-sm-5 bg-dark">
-        <div class="col-sm-9 pr-sm-3 pr-0 pl-sm-0 pl-0">
-            <div class="content col-sm-12 bg-white text-dark">
-                <p class="lead"
-                   i18n>BORIS.NIFür Bauland und landwirtschaftliche Nutzflächen für das gesamte Land Niedersachsen</p>
+    <div class="row pr-sm-5 pt-sm-3">
+        <div class="col-sm-9 p-0">
+            <div class="content col-sm-12 text-dark p-5 rounded-right">
+                <a class="h2 btn-link text-dark font-weight-bold"
+                   [routerLink]="['/immobilienpreisindex']"
+                   i18n>NIPIX</a>
+                <p class="h6"
+                   i18n>Niedersächsischer Immobilienpreisindex</p>
+                <p class="lead text-justify"
+                   i18n>Zur Darstellung der Preisentwicklung von Eigenheimen (freistehende Ein- und Zweifamilienhäuser,
+                    Reihenhäuser und Doppelhaushälften) und Eigentumswohnungen leitet der Obere Gutachterausschuss einen
+                    „Niedersächsischen Immobilienpreisindex für Eigenheime und Eigentumswohnungen (NIPIX)“ ab. Die
+                    Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte.</p>
                 <!-- <input placeholder="Geben Sie einen Ort ein" style="margin-top: 200px;"> -->
             </div>
         </div>
-        <div class="col-sm-3 pr-sm-0 pr-0 pl-sm-3 pl-0 order-sm-last order-first bg-white">
+        <div class="col-sm-3 pr-sm-0 pr-0 pl-sm-3 pl-0 order-sm-last order-first">
             <div class="image col-sm-12 p-0">
-                <img class="img-fluid float-right"
-                     src="../../../assets/logos/lgln_logo_wout_claim.png">
+                <img class="img-fluid rounded"
+                     src="../../../assets/IMG_8355.JPG">
             </div>
         </div>
     </div>
-    <div class="row pl-sm-5 py-sm-5">
+    <div class="row pl-sm-5 pt-sm-3">
         <div class="col-sm-3 pr-sm-3 pr-0 pl-sm-0 pl-0">
             <div class="image col-sm-12 p-0">
-                <img class="img-fluid"
-                     src="../../../assets/IMG_Immobilienindex.webp">
+                <img class="img-fluid rounded"
+                     src="../../../assets/IMG_Fragebogen.webp">
             </div>
         </div>
         <div class="col-sm-9 pr-sm-0 pr-0 pl-sm-3 pl-0">
-            <div class="content col-sm-12 bg-dark text-white">
-                <p class="lead"
-                   i18n>Für Bauland und landwirtschaftliche Nutzflächen für das gesamte Land Niedersachsen</p>
+            <div class="content col-sm-12 text-dark p-5 rounded-left">
+                <a class="h2 btn-link text-dark font-weight-bold"
+                   [routerLink]="['/immobilienpreisindex']"
+                   i18n>Fragebogen-Online</a>
+                <p class="lead text-justify pt-3"
+                   i18n>Zur Darstellung der Preisentwicklung von Eigenheimen (freistehende Ein- und Zweifamilienhäuser,
+                    Reihenhäuser und Doppelhaushälften) und Eigentumswohnungen leitet der Obere Gutachterausschuss einen
+                    „Niedersächsischen Immobilienpreisindex für Eigenheime und Eigentumswohnungen (NIPIX)“ ab. Die
+                    Gutachterausschüsse und der Obere Gutachterausschuss für Grundstückswerte.</p>
+                <!-- <p>{{ 'Bodenrichtwertinformationssystem' | hyphenate }} -->
                 <!-- <input placeholder="Geben Sie einen Ort ein" style="margin-top: 200px;"> -->
             </div>
         </div>
