--- a/power/src/app/fragebogen/editor/editor.component.css
+++ b/power/src/app/fragebogen/editor/editor.component.css
@@ -65,3 +65,20 @@ li.smooth-dnd-draggable-wrapper:last-child .page-link {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
 }
+
+.custom-animation {
+    animation-name: spin;
+    animation-duration: 5000ms;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(360deg);
+    }
+}
