Unit tests for BodenrichtwertVerlaufComponent

--- a/power/src/app/bodenrichtwert/bodenrichtwert-verlauf/bodenrichtwert-verlauf.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-verlauf/bodenrichtwert-verlauf.component.html
@@ -4,7 +4,7 @@
     <p>Die zeitliche Entwicklungsreihe berücksichtigt nur die Bodenrichtwerte, die zum Stichtag 31.12. des jeweiligen
         Jahres ermittelt werden. Sie berücksichtigt keine unterjährigen konjunkturellen Entwicklungen.</p>
 
-    <div echarts (chartInit)="onChartInit($event)" [options]="chartOption" class="demo-chart"></div>
+    <div echarts (chartInit)="onChartInit($event)" [options]="chartOption" class="time-series" id="time-series"></div>
 
     <div>
         <p *ngIf="chartOption?.series.length >= 2">Für die ausgewählte Koordinate liegen seit dem Jahr 2012 mehrere
