refactored start page

--- a/power/src/app/static/start/start.component.html
+++ b/power/src/app/static/start/start.component.html
@@ -39,16 +39,16 @@
 <!-- <div class="product-device-4 shadow-sm mx-auto d-none d-lg-block"></div>
     </div>
 </div> -->
-<div class="container-fluid">
-    <div class="row pl-sm-5 pt-sm-3">
-        <div class="col-sm-6 p-0">
-            <div class="image col-sm-12 p-0">
+<div class="container-xl border-left border-right">
+    <div class="row pl-mm-5 pt-md-5 pr-md-0 pb-md-0 p-2">
+        <div class="col-md-6 p-0">
+            <div class="image col-md-12 p-0">
                 <img class="img-fluid rounded"
                      src="../../../assets/IMG_8355.JPG">
             </div>
         </div>
-        <div class="col-sm-6 px-0 pl-sm-3">
-            <div class="content col-sm-12 text-dark p-5 rounded-left">
+        <div class="col-md-6 px-0 pl-md-5 pt-2">
+            <div class="content col-md-12 text-dark p-5 rounded-left">
                 <a class="h2 btn-link text-dark font-weight-bold"
                    [routerLink]="['/bodenrichtwerte']"
                    i18n>BORIS.NI</a>
@@ -62,9 +62,9 @@
             </div>
         </div>
     </div>
-    <div class="row pr-sm-5 pt-sm-3">
-        <div class="col-sm-9 p-0">
-            <div class="content col-sm-12 text-dark p-5 rounded-right">
+    <div class="row pr-md-5 pt-md-5 pl-md-0 pb-md-0 p-2">
+        <div class="col-md-9 p-0 pr-md-5 pt-2">
+            <div class="content col-md-12 text-dark p-5 rounded-right">
                 <a class="h2 btn-link text-dark font-weight-bold"
                    [routerLink]="['/immobilienpreisindex']"
                    i18n>NIPIX</a>
@@ -78,22 +78,22 @@
                 <!-- <input placeholder="Geben Sie einen Ort ein" style="margin-top: 200px;"> -->
             </div>
         </div>
-        <div class="col-sm-3 pr-sm-0 pr-0 pl-sm-3 pl-0 order-sm-last order-first">
-            <div class="image col-sm-12 p-0">
+        <div class="col-md-3 pr-md-0 pr-0 pl-0 order-md-last order-first">
+            <div class="image col-md-12 p-0">
                 <img class="img-fluid rounded"
                      src="../../../assets/IMG_8355.JPG">
             </div>
         </div>
     </div>
-    <div class="row pl-sm-5 pt-sm-3">
-        <div class="col-sm-3 pr-sm-3 pr-0 pl-sm-0 pl-0">
-            <div class="image col-sm-12 p-0">
+    <div class="row pl-md-5 pt-md-5 pr-md-0 pb-md-0 p-2">
+        <div class="col-md-3 pr-0 pl-md-0 pl-0">
+            <div class="image col-md-12 p-0">
                 <img class="img-fluid rounded"
                      src="../../../assets/IMG_Fragebogen.webp">
             </div>
         </div>
-        <div class="col-sm-9 pr-sm-0 pr-0 pl-sm-3 pl-0">
-            <div class="content col-sm-12 text-dark p-5 rounded-left">
+        <div class="col-md-9 pr-md-0 pr-0 pl-md-5 pl-0 pt-2">
+            <div class="content col-md-12 text-dark p-5 rounded-left">
                 <a class="h2 btn-link text-dark font-weight-bold"
                    [routerLink]="['/immobilienpreisindex']"
                    i18n>Fragebogen-Online</a>
