Added japanese language

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -155,11 +155,11 @@
                     <div class="h5"
                          i18n>Sprache</div>
                     <a href="{{ baseurl }}"
-                       class="footer-link"
-                       i18n>Deutsch</a>
+                       class="footer-link">Deutsch</a>
                     - <a href="/en{{ baseurl }}"
-                       class="footer-link"
-                       i18n>Englisch</a>
+                       class="footer-link">English</a>
+                    - <a href="/ja{{ baseurl }}"
+                       class="footer-link">日本語</a>
                     <hr>
 
                     <div class="h5"
