--- a/power/src/app/immobilien/immobilien/immobilien.component.html
+++ b/power/src/app/immobilien/immobilien/immobilien.component.html
@@ -5,9 +5,8 @@
         <div echarts [options]="this.nipixRuntime.chart.options" (chartInit)="onChartChartInit($event)"
              (chartDataZoom)="onDataZoom($event)" (chartClick)="chartClicked($event)"
              (chartFinished)="onChartFinished($event)" class="demo-chart chart-graph"></div>
-        <div style="text-align: center;" [ngStyle]="{'font-size': nipixStatic.textOptions.fontSizePage+'rem'}">HINWEIS:
-            Das Basisjahr der Indexreihenberechnung richtet sich nach der unteren Auswahl und lässt sich mit den Reglern
-            dynamisch anpassen.
+        <div style="text-align: center;" [ngStyle]="{'font-size': nipixStatic.textOptions.fontSizePage+'rem'}" i18n>
+            HINWEIS: Das Basisjahr der Indexreihenberechnung richtet sich nach der unteren Auswahl und lässt sich mit den Reglern dynamisch anpassen.
         </div>
     </div>
     <div class="col-sm-4">
@@ -66,8 +65,8 @@
                         </div>
                     </div>
 
-                    <div *ngIf="select['type'] == 'multiSelect'" style="padding-left: 40px; margin-bottom: 1rem;">
-                        HINWEIS: Eine Auswahl über die Karte ist für die Vergleiche leider nicht möglich.
+                    <div *ngIf="select['type'] == 'multiSelect'" style="padding-left: 40px; margin-bottom: 1rem;" i18n>
+                         HINWEIS: Eine Auswahl über die Karte ist für die Vergleiche leider nicht möglich.
                     </div>
 
                     <!-- Select DrawValues-->
@@ -116,13 +115,17 @@
                                         </label>
                                     </span>
                                     <span class="dotlabel" style="vertical-align: middle;"
-                                        *ngIf="select['type'] == 'single' && nipixRuntime.getDrawPreset(itm).values.length == 0">alle auswählen</span>
+                                        *ngIf="select['type'] == 'single' && nipixRuntime.getDrawPreset(itm).values.length == 0" i18n>
+                                        alle auswählen
+                                    </span>
                                     <span class="dotlabel" style="vertical-align: middle;"
-                                        *ngIf="select['type'] == 'single' && nipixRuntime.getDrawPreset(itm).values.length > 0">Auswahl aufheben</span>
+                                        *ngIf="select['type'] == 'single' && nipixRuntime.getDrawPreset(itm).values.length > 0" i18n>
+                                        Auswahl aufheben
+                                    </span>
                                 </ng-container>
                             </ng-container>
                             <ng-container *ngIf="select['type'] == 'multiSelect'">
-                                <span class="dotlabel" style="padding-left: 0.5rem; vertical-align: middle;">
+                                <span class="dotlabel" style="padding-left: 0.5rem; vertical-align: middle;" i18n>
                                     alle/keine auswählen
                                 </span>
                             </ng-container>
@@ -185,10 +188,10 @@
                 <ng-template ngbPanelTitle>
                     <i-bs name="plus-circle" *ngIf="staticExpand(99) == false" aria-hidden="true"></i-bs>
                     <i-bs name="dash-circle" *ngIf="staticExpand(99) == true" aria-hidden="true"></i-bs>
-                    Zu welcher Wohnungsmarktregion gehört meine Gemeinde?
+                    <ng-container i18n>Zu welcher Wohnungsmarktregion gehört meine Gemeinde?</ng-container>
                 </ng-template>
                 <ng-template ngbPanelContent>
-                    <label for="typeahead-focus">Suchen Sie ihre Gemeinde:</label>
+                    <label for="typeahead-focus" i18n>Suchen Sie ihre Gemeinde:</label>
                     <input
                         id="typeahead-focus"
                         type="text"
@@ -201,7 +204,7 @@
                         >
                         <ng-container *ngIf="regionName(nipixStatic.data.gemeinden[model]) !== ''">
                             <hr>
-                            Ihre Wohnungsmarktregion: {{ regionName(nipixStatic.data.gemeinden[model]) }}
+                            <ng-container i18n>Ihre Wohnungsmarktregion:</ng-container> {{ regionName(nipixStatic.data.gemeinden[model]) }}
                         </ng-container>
 
                 </ng-template>
@@ -209,8 +212,9 @@
 
         </ngb-accordion>
         <div style="text-align: center; margin-top: 1rem;">
-            Es gelten die <a href="{{nipixStatic.agnbUrl}}" target="_blank" rel="noreferrer">Allgemeinen Geschäfts- und
-            Nutzungsbedingungen (AGNB)</a>.
+            <ng-container i18n="AGNB Start">Es gelten die</ng-container> <a href="{{nipixStatic.agnbUrl}}" target="_blank" rel="noreferrer" i18n="AGNB">
+                Allgemeinen Geschäfts- und Nutzungsbedingungen (AGNB)
+            </a><ng-container i18n="AGNB Ende">.</ng-container>
         </div>
     </div>
 </div>
