--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -112,7 +112,8 @@
         [maxZoom]="20"
         [minZoom]="5"
         [style]="MAP_STYLE_URL"
-        [trackResize]="true">
+        [trackResize]="true"
+        id="map">
 
         <mgl-geojson-source id="ndsgeojson" [data]="baseUrl+'/assets/boden/niedersachsen.geojson'"></mgl-geojson-source>
 
